tests/fixtures/LatestTests/VariableDeclarationTests/errors/assignment_type_mismatch_str_to_char.fg
/; EXPECT_ERROR: AssignmentExpressionTypeMismatch
var x:char = 'a'
x = "hello"

